# model-based-app

./: .gitignore  README.md
backend/: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt  test.py  test_api_endpoints.py
backend/api/: serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py  wsgi.py
backend/chronic kidney disease/: script.py
backend/chronic kidney disease/models/: chronic_kidney_disease.pkl
backend/diabetes/: script.py
backend/diabetes/models/: diabetes.pkl
backend/heart disease/: script.py
backend/heart disease/models/: diabetes.pkl  heart_disease.pkl
frontend/sedi_diabetes_app/: README.md  SETUP_GUIDE.md  firebase.json  firestore.rules  pubspec.yaml
frontend/sedi_diabetes_app/android/app/: build.gradle.kts
frontend/sedi_diabetes_app/ios/Runner/: Info.plist
frontend/sedi_diabetes_app/ios/Runner.xcodeproj/: project.pbxproj
frontend/sedi_diabetes_app/lib/: firebase_options.dart  main.dart
frontend/sedi_diabetes_app/lib/models/: assessment_result.dart  diabetes_model.dart
frontend/sedi_diabetes_app/lib/screens/: account_details_screen.dart  ckd_assessment_screen.dart  diabetes_assessment_screen.dart  heart_disease_assessment_screen.dart  history_detail_screen.dart  history_screen.dart  home_screen.dart  loading_screen.dart  login_screen.dart  profile_screen.dart  (+1 more)
frontend/sedi_diabetes_app/linux/: CMakeLists.txt
frontend/sedi_diabetes_app/test/: widget_test.dart
frontend/sedi_diabetes_app/web/: index.html  manifest.json
frontend/sedi_diabetes_app/windows/: CMakeLists.txt
(+13 files in other folders)
