[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "python-dotenv>=1.2.1",
    # ML dependencies for model inference
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "joblib>=1.4.2",
]

[project.optional-dependencies]
training = [
    # Only needed for training models, not for production API
    "lightgbm>=4.6.0",
    "xgboost>=3.2.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]